sfdx-source/force-app/main/default/objects/Status_Reason_And_Details_Mapping__mdt/Status_Reason_And_Details_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>LEM-9964: It stores the SObject’s Type, Status and Status Reason mappings for integration failures.</description>
    <label>Status Reason And Details Mapping</label>
    <pluralLabel>Status Reason And Details Mappings</pluralLabel>
</CustomObject>