sfdx-source/force-app/main/default/objects/Status_Reason_And_Details_Mapping__mdt/fields/Business_Friendly_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Business_Friendly_Mapping__c</fullName>
    <description>LEM-9964: It is used to associate the Status Reason and Details Mappings to a Business Friendly Mapping.</description>
    <label>Business Friendly Mapping</label>
    <referenceTo>Business_Friendly_Mapping__mdt</referenceTo>
    <relationshipLabel>Status Reason And Details Mappings</relationshipLabel>
    <relationshipName>Status_Reason_And_Details_Mappings</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>