sfdx-source/force-app/main/default/objects/Status_Reason_And_Details_Mapping__mdt/fields/Quick_Action_Name__c.field-meta.xml
<CustomField>
    <fullName>Quick_Action_Name__c</fullName>
    <description>Created this field to map the quick action which was created for having the resolution steps/guided flow for fixing this particular error with work step.</description>
    <label>Quick Action Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>