sfdx-source/force-app/main/default/objects/Status_Reason_And_Details_Mapping__mdt/fields/Status_Reason__c.field-meta.xml
<CustomField>
    <fullName>Status_Reason__c</fullName>
    <description>LEM-9964: It stores the Status Reason values of SObjects(currently used for WorkStep).</description>
    <label>Status_Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Appears to be Change of Ownership - Provide Original Store ID</fullName>
            </value>
            <value>
                <fullName>Business reference not found</fullName>
            </value>
            <value>
                <fullName>Invalid Address</fullName>
            </value>
            <value>
                <fullName>Invalid Store Phone</fullName>
            </value>
            <value>
                <fullName>Manual Store Creation Needed</fullName>
            </value>
            <value>
                <fullName>Mx requested Order Protocol change</fullName>
            </value>
            <value>
                <fullName>Needs Coverage Extension - Location is out of Starting Point</fullName>
            </value>
            <value>
                <fullName>Not in Coverage - Location is out of Starting Point</fullName>
            </value>
            <value>
                <fullName>Store Provisioning Failed - Please refer to Provisioning Errors tab</fullName>
            </value>
            <value>
                <fullName>Submarket is not live and Launch Date is TBD</fullName>
            </value>
            <value>
                <fullName>Unidentified Provisioning Error</fullName>
            </value>
            <value>
                <fullName>VB does not pass QC</fullName>
            </value>
            <value>
                <fullName>Invalid payment account details</fullName>
            </value>
            <value>
                <fullName>Missing Billing Contact Name</fullName>
            </value>
            <value>
                <fullName>Invalid POS details</fullName>
            </value>
            <value>
                <fullName>Missing Decision Maker contact info on Store</fullName>
            </value>
            <value>
                <fullName>Services set incorrectly</fullName>
            </value>
            <value>
                <fullName>System error</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Duplicate POS Integration ID - Already in Use</fullName>
            </value>
            <value>
                <fullName>Invalid POS Integration ID</fullName>
            </value>
            <value>
                <fullName>Missing Store hours</fullName>
            </value>
            <value>
                <fullName>No menu source found</fullName>
            </value>
            <value>
                <fullName>Missing POS Integration ID</fullName>
            </value>
            <value>
                <fullName>Invalid Routing Number</fullName>
            </value>
            <value>
                <fullName>Invalid Account Number</fullName>
            </value>
            <value>
                <fullName>Invalid EIN</fullName>
            </value>
            <value>
                <fullName>Missing Menu Link</fullName>
            </value>
            <value>
                <fullName>Missing Account Number</fullName>
            </value>
            <value>
                <fullName>Invalid Contract</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>