sfdx-source/force-app/main/default/objects/Status_Reason_And_Details_Mapping__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>LEM-9964: It stores the Type values of SObjects(currently used for WorkStep).</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Activate Store</fullName>
            </value>
            <value>
                <fullName>Activations Outreach</fullName>
            </value>
            <value>
                <fullName>Activations Checklist</fullName>
            </value>
            <value>
                <fullName>Add Marketing</fullName>
            </value>
            <value>
                <fullName>Ads and Promo</fullName>
            </value>
            <value>
                <fullName>Ads and Promo - Activate</fullName>
            </value>
            <value>
                <fullName>Ads and Promo - Deactivate</fullName>
            </value>
            <value>
                <fullName>Cross Listing - Caviar</fullName>
            </value>
            <value>
                <fullName>Deliver Tablet</fullName>
            </value>
            <value>
                <fullName>Drive</fullName>
            </value>
            <value>
                <fullName>Fee Credit</fullName>
            </value>
            <value>
                <fullName>Grant Portal Access</fullName>
            </value>
            <value>
                <fullName>Implementation Call</fullName>
            </value>
            <value>
                <fullName>Link Implementation</fullName>
            </value>
            <value>
                <fullName>Link Optimization</fullName>
            </value>
            <value>
                <fullName>Menu Updates</fullName>
            </value>
            <value>
                <fullName>Post-Sales - Other</fullName>
            </value>
            <value>
                <fullName>Rate Change</fullName>
            </value>
            <value>
                <fullName>Review &amp; Triage</fullName>
                <default>true</default>
                <label>Review &amp; Triage</label>
            </value>
            <value>
                <fullName>Setup Banking</fullName>
            </value>
            <value>
                <fullName>Setup Business</fullName>
            </value>
            <value>
                <fullName>Setup Catalog</fullName>
            </value>
            <value>
                <fullName>Setup Custom Delivery Radius</fullName>
            </value>
            <value>
                <fullName>Setup Menu</fullName>
            </value>
            <value>
                <fullName>Setup POS</fullName>
            </value>
            <value>
                <fullName>Setup Store</fullName>
            </value>
            <value>
                <fullName>Setup Storefront Page</fullName>
            </value>
            <value>
                <fullName>Sponsored Listing</fullName>
            </value>
            <value>
                <fullName>Complete pre-work</fullName>
            </value>
            <value>
                <fullName>Configure POS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>