sfdx-source/force-app/main/default/objects/Status_Reason_And_Details_Mapping__mdt/listViews/All_Mappings.listView-meta.xml
<ListView>
    <fullName>All_Mappings</fullName>
    <columns>MasterLabel</columns>
    <columns>Business_Friendly_Mapping__c</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <columns>Status_Reason__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Mappings</label>
</ListView>